[package]
name = "syspect"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"
description = "Linux eBPF Monitoring daemon"
homepage = "https://github.com/loshz/syspect"
repository = "https://github.com/loshz/syspect"
license = "GPL-3.0"
keywords = ["linux", "ebpf", "monitoring", "metrics", "prometheus"]
readme = "README.md"

[dependencies]
libbpf-rs = "0.19"
libc = "0.2"
nix = "0.25"
clap = { version = "4.0", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
anyhow = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
metrics_server = "0.10"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread", "signal", "time"] }
log = "0.4"
simplelog = "0.12"
prometheus-client = "0.18"

[build-dependencies]
libbpf-cargo = "0.13"
