[package]
name = "syspect"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "Linux eBPF Monitoring daemon"
homepage = "https://git.sr.ht/~loshz/syspect"
repository = "https://git.sr.ht/~loshz/syspect"
license = "MIT AND GPL-3.0"
keywords = ["linux", "ebpf", "monitoring", "metrics", "prometheus"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
# libbpf-rs = "0.24"
libc = "0.2"
metrics_server = "0.15"
nix = { version = "0.29.0", features = ["user"] }
prometheus-client = "0.22"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.64"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = "0.8"

[build-dependencies]
libbpf-cargo = "0.24"
